Recover deleted files

--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/omage.png">
+        <link rel="icon" type="image/png" href="assets/omage.png">
         <title>Omage Image Gallery</title>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <section class="search" alt="Search Images">
+            <section class="search">
                 <div class="content">
                     <h1>omage</h1>
                     <p>Search and download any images within seconds</p>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </section>
-            <section class="gallery" alt="Images Gallery">
+            <section class="gallery">
                 <ul class="images"></ul>
                 <button class="load-more">Load More</button>
             </section>
